--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-4/cop06-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-4/cop06-4.component.html
@@ -43,7 +43,7 @@
             <input type="text" class="custom-readonly" disabled [(ngModel)]="form.exciseName" name="exciseName">
           </div>
         </div>
-
+       
 
         <div class="inline fields  ui grid">
           <div class="three wide field ">
@@ -135,7 +135,7 @@
         <br>
         <div class="ui center aligned grid">
           <div class="six wide column">
-            <button class="ui mini primary button" (click)="save()" [disabled]="buttonDisabled">
+            <button class="ui mini primary button" (click)="save()" >
               <i class="print icon"></i>
               บันทึกข้อมูล
             </button>
