--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -212,6 +212,7 @@
                 <a class="item " *ngIf="authService.renderByPage('cop03/1')" [routerLink]="[ '/cop03/1'] " routerLinkActive="active ">จัดทำหนังสือขออนุมัติเดินทางไปราชการตรวจปฏิบัติการ</a>
                 <a class="item " *ngIf="authService.renderByPage('cop03/1/1')" [routerLink]="[ '/cop03/1/1'] " routerLinkActive="active ">ค้นหาหนังสือขออนนุมัติเดินทางไปราชการ</a> -->
             <a class="item " *ngIf="authService.renderByPage('cop07/1')" [routerLink]="[ '/cop07/1'] " routerLinkActive="active ">แผนการตรวจปฏิบัติการประจำปีงบประมาณ</a>
+            <a class="item " *ngIf="authService.renderByPage('cop08')" [routerLink]="[ '/cop08'] " routerLinkActive="active ">วิเคราะห์แนวโน้มการชำระภาษีของผู้ประกอบการ</a>
             <div class="ui dropdown item ">รายงานการตรวจปฏิบัติการ<i class="dropdown icon "></i>
                 <div class="menu">
 
@@ -224,7 +225,7 @@
                 </div>
             </div>
             <!-- <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/cop06'] " routerLinkActive="active ">รายงานการตรวจปฏิบัติการ</a> -->
-            <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/cop06'] " routerLinkActive="active ">สรุปผลการตรวจปฏิบัติการ</a>
+            <a class="item " *ngIf="authService.renderByPage('cop09/1')" [routerLink]="[ '/cop09/1'] " routerLinkActive="active ">สรุปผลการตรวจปฏิบัติการ</a>
             <a class="item " *ngIf="authService.renderByPage('cop06')" [routerLink]="[ '/tax-audit-manage'] " routerLinkActive="active ">จัดทำหนังสือราชการ บันทึกข้อความ และแบบ ตส.ต่างๆ</a>
             <!-- <a class="item " *ngIf="authService.renderByPage('cop04/1')" [routerLink]="[ '/cop04/1'] " routerLinkActive="active ">บันทึกผลการตรวจปฏิบัติการ</a>
                 <a class="item " *ngIf="authService.renderByPage('cop04/2')" [routerLink]="[ '/cop04/2'] " routerLinkActive="active ">ค้นหาบันทึกผลการตรวจปฏิบัติการ</a>
