--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6.component.html
@@ -8,15 +8,15 @@
     </div>
 
     <div class="ui attached segment {{loading ? 'loading' : ''}}">
-      <form class="ui form" id="form">
+      <form class="ui form" id="form" [formGroup]="formControl" (submit)="search()">
         <!-- row 1 -->
         <div class="inline fields  ui grid">
-          <div class="three wide field ">
+          <div class="three wide field required">
             <label class="text-right full-width">ทะเบียนสรรพสามิต</label>
           </div>
-          <div class="four wide field" [ngClass]="{'error': error}">
-            <select name="exciseId " id="exciseId" class="ui dropdown ai search full-width office" (change)="changeExciseId($event)"
-              [(ngModel)]="form.exciseId">
+          <div class="four wide field" [ngClass]="{ 'error': submitted && f.exciseId.invalid }">
+            <select name="exciseId" id="exciseId" formControlName="exciseId" class="ui dropdown ai search full-width office"
+              (change)="changeExciseId($event)">
               <option value="">กรุณาเลือก</option>
               <option *ngFor="let item of exciseIdList" value="{{item.value}}">{{item.label}}</option>
 
@@ -26,7 +26,7 @@
             <label class="text-right full-width">เลขประจำตัวผู้เสียภาษี</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.userNumber" name="userNumber">
+            <input type="text" class="custom-readonly" formControlName="userNumber" disabled name="userNumber">
           </div>
         </div>
 
@@ -36,13 +36,13 @@
             <label class="text-right full-width">ผู้ประกอบการ</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.entrepreneur" name="entrepreneur">
+            <input type="text" class="custom-readonly" disabled formControlName="entrepreneur" name="entrepreneur">
           </div>
           <div class="three wide field ">
             <label class="text-right full-width">เลขที่วิเคราะห์</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.anlysisNumber" name="anlysisNumber">
+            <input type="text" class="custom-readonly" disabled formControlName="anlysisNumber" name="anlysisNumber">
           </div>
         </div>
 
@@ -52,46 +52,46 @@
             <label class="text-right full-width">ประเภท</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.type" name="type">
+            <input type="text" class="custom-readonly" disabled formControlName="type" name="type">
           </div>
           <div class="three wide field ">
             <label class="text-right full-width">พิกัด</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled [(ngModel)]="form.coordinates" name="coordinates">
+            <input type="text" class="custom-readonly" disabled formControlName="coordinates" name="coordinates">
           </div>
         </div>
 
         <!-- row 4 -->
         <div class="inline fields  ui grid">
-          <div class="three wide field ">
+          <div class="three wide field required">
             <label class="text-right full-width">รอบระยะเวลาการตรวจสอบ</label>
           </div>
-          <div class="four wide field ">
+          <div class="four wide field" [ngClass]="{ 'error': submitted && f.dateFrom.invalid }">
             <div class="ui calendar full-width" id="dateF">
               <div class="ui input left icon">
                 <i class="clock icon"></i>
-                <input name="dateFrom" type="text" id="dateFrom" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป"
-                  [attr.required]="true">
+                <input name="dateFrom" type="text" id="dateFrom" formControlName="dateFrom" autocomplete="off"
+                  [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
-          <div class="three wide field ">
+          <div class="three wide field required">
             <label class="text-right full-width">ถึง</label>
           </div>
-          <div class="four wide field ">
+          <div class="four wide field" [ngClass]="{ 'error': submitted && f.dateTo.invalid }">
             <div class="ui calendar full-width" id="dateT">
               <div class="ui input left icon">
                 <i class="clock icon"></i>
-                <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป"
-                  [attr.required]="true">
+                <input name="dateTo" type="text" id="dateTo" formControlName="dateTo" autocomplete="off"
+                  [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
         </div>
         <br><br>
         <div class="ui stackable center aligned page grid">
-          <button class="ui mini primary button" type="button" (click)="search()"><i class="file outline icon"></i>
+          <button class="ui mini primary button" type="submit"><i class="file outline icon"></i>
             แสดงกระดาษทำการ</button>
           <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
         </div><br>
@@ -155,7 +155,7 @@
               title="อัปโหลด Template ข้อมูลการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02)">
           </div>
           <div class="three wide field ">
-            <button class="ui mini primary button" (click)="upload()"><i class="upload icon"></i>อัปโหลด</button>
+            <button class="ui mini primary button" (click)="upload()" [disabled]="uploadDisabled"><i class="upload icon"></i>อัปโหลด</button>
           </div>
           <div class="four wide field ">
 
